--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
         Enter country code :
     </p>
     <div class="tag-container">
-        <input type="text" class="main-input" id="myInput" placeholder="Add a country">
+        <div class="input-container">
+            <div class="box arrow-right"></div>
+            <input type="text" class="main-input" id="myInput" placeholder="Add a country">
+        </div>
         <input type="hidden" class="hidden-tags" value="hello!">
     </div>
     <div id="autocomplete-container" style="width:300px;">
